crates/slate/tests/snapshots/heap_vec_realloc.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn malloc(_0: usize) -> *mut core::ffi::c_void;
    fn realloc(_0: *mut core::ffi::c_void, _1: usize) -> *mut core::ffi::c_void;
    fn printf(_0: *const i8, ...) -> i32;
    fn free(_0: *mut core::ffi::c_void);
}

fn main() {
    let mut __retval: i32 = 0;
    let mut p: *mut i32 = std::ptr::null_mut();
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: u64 = 4;
    let _v2: u64 = 2;
    let _v3: u64 = _v1 * _v2;
    let _v4: *mut core::ffi::c_void = unsafe { malloc(_v3 as usize) };
    let _v5: *mut i32 = _v4 as *mut i32;
    p = _v5;
    let _v6: i32 = 1;
    let _v7: i64 = 0;
    let _v8: *mut i32 = p;
    let _v9: *mut i32 = unsafe { _v8.add(0) };
    unsafe {
        *_v9 = _v6;
    }
    let _v10: i32 = 2;
    let _v11: i64 = 1;
    let _v12: *mut i32 = p;
    let _v13: *mut i32 = unsafe { _v12.add(1) };
    unsafe {
        *_v13 = _v10;
    }
    let _v14: *mut i32 = p;
    let _v15: *mut core::ffi::c_void = _v14 as *mut core::ffi::c_void;
    let _v16: u64 = 4;
    let _v17: u64 = 4;
    let _v18: u64 = _v16 * _v17;
    let _v19: *mut core::ffi::c_void = unsafe { realloc(_v15 as *mut core::ffi::c_void, _v18 as usize) };
    let _v20: *mut i32 = _v19 as *mut i32;
    p = _v20;
    let _v21: i32 = 3;
    let _v22: i64 = 2;
    let _v23: *mut i32 = p;
    let _v24: *mut i32 = unsafe { _v23.add(2) };
    unsafe {
        *_v24 = _v21;
    }
    let _v25: i32 = 4;
    let _v26: i64 = 3;
    let _v27: *mut i32 = p;
    let _v28: *mut i32 = unsafe { _v27.add(3) };
    unsafe {
        *_v28 = _v25;
    }
    let _v29: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v30: i64 = 0;
    let _v31: *mut i32 = p;
    let _v32: *mut i32 = unsafe { _v31.add(0) };
    let _v33: i32 = unsafe { *_v32 };
    let _v34: i64 = 1;
    let _v35: *mut i32 = p;
    let _v36: *mut i32 = unsafe { _v35.add(1) };
    let _v37: i32 = unsafe { *_v36 };
    let _v38: i32 = _v33 + _v37;
    let _v39: i64 = 2;
    let _v40: *mut i32 = p;
    let _v41: *mut i32 = unsafe { _v40.add(2) };
    let _v42: i32 = unsafe { *_v41 };
    let _v43: i32 = _v38 + _v42;
    let _v44: i64 = 3;
    let _v45: *mut i32 = p;
    let _v46: *mut i32 = unsafe { _v45.add(3) };
    let _v47: i32 = unsafe { *_v46 };
    let _v48: i32 = _v43 + _v47;
    let _v49: i32 = unsafe { printf(_v29 as *const i8, _v48) };
    let _v50: *mut i32 = p;
    let _v51: *mut core::ffi::c_void = _v50 as *mut core::ffi::c_void;
    unsafe { free(_v51 as *mut core::ffi::c_void) };
    let _v52: i32 = 0;
    __retval = _v52;
    let _v53: i32 = __retval;
    std::process::exit(_v53 as i32);
}
