crates/slate/tests/snapshots/indirect_call_void_ptr_param.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

#[repr(C)]
#[derive(Clone, Copy)]
struct Data {
    value: i32,
}


static mut process_c: i8 = 0;

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn process(arg2: i32, arg3: Option<unsafe extern "C" fn(*mut core::ffi::c_void, i32)>, arg4: *mut Data) {
    let mut flag: i32 = 0;
    let mut handler: Option<unsafe extern "C" fn(*mut core::ffi::c_void, i32)> = None;
    let mut d: *mut Data = std::ptr::null_mut();
    flag = arg2;
    handler = arg3;
    d = arg4;
    {
        let _v0: i32 = flag;
        let _v1: bool = _v0 != 0;
        if _v1 {
            let _v2: Option<unsafe extern "C" fn(*mut core::ffi::c_void, i32)> = handler;
            let _v3: *mut core::ffi::c_void = std::ptr::addr_of_mut!(process_c) as *mut core::ffi::c_void;
            let _v4: i32 = 0;
            unsafe { _v2.unwrap()(_v3, _v4) };
            return;
        }
    }
    let _v5: Option<unsafe extern "C" fn(*mut core::ffi::c_void, i32)> = handler;
    let _v6: *mut Data = d;
    let _v7: *mut core::ffi::c_void = _v6 as *mut core::ffi::c_void;
    let _v8: i32 = 42;
    unsafe { _v5.unwrap()(_v7, _v8) };
    return;
}

extern "C" fn print_handler(arg0: *mut core::ffi::c_void, arg1: i32) {
    let mut p: *mut core::ffi::c_void = std::ptr::null_mut();
    let mut extra: i32 = 0;
    let mut d: *mut Data = std::ptr::null_mut();
    p = arg0;
    extra = arg1;
    {
        let _v0: i32 = extra;
        let _v1: i32 = 0;
        let _v2: bool = _v0 == _v1;
        if _v2 {
            let mut c: *mut i8 = std::ptr::null_mut();
            let _v3: *mut core::ffi::c_void = p;
            let _v4: *mut i8 = _v3 as *mut i8;
            c = _v4;
            let _v5: *mut i8 = b"zero %d\n\0".as_ptr() as *mut i8;
            let _v6: *mut i8 = c;
            let _v7: i8 = unsafe { *_v6 };
            let _v8: i32 = _v7 as i32;
            let _v9: i32 = unsafe { printf(_v5 as *const i8, _v8) };
            return;
        }
    }
    let _v10: *mut core::ffi::c_void = p;
    let _v11: *mut Data = _v10 as *mut Data;
    d = _v11;
    let _v12: *mut i8 = b"%d %d\n\0".as_ptr() as *mut i8;
    let _v13: *mut Data = d;
    let _v14: i32 = unsafe { (*_v13).value };
    let _v15: i32 = extra;
    let _v16: i32 = unsafe { printf(_v12 as *const i8, _v14, _v15) };
    return;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut d: Data = Data { value: 0 };
    let _v0: i32 = 0;
    __retval = _v0;
    d = Data { value: 7 };
    let _v1: i32 = 1;
    process(_v1, Some(print_handler), std::ptr::addr_of_mut!(d));
    let _v2: i32 = 0;
    process(_v2, Some(print_handler), std::ptr::addr_of_mut!(d));
    let _v3: i32 = 0;
    __retval = _v3;
    let _v4: i32 = __retval;
    std::process::exit(_v4 as i32);
}
