crates/slate/tests/snapshots/inline_asm_ops.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn asm_probe(arg0: i32) -> i32 {
    let mut x: i32 = 0;
    let mut __retval: i32 = 0;
    x = arg0;
    let _v0: i32 = x;
    let _v1: i32;
    unsafe {
        core::arch::asm!("\n/* {0:e} */", inlateout(reg) _v0 => _v1, options(att_syntax));
    }
    x = _v1;
    let _v2: i32 = x;
    let _v3: i32 = 1;
    let _v4: i32 = _v2 + _v3;
    __retval = _v4;
    let _v5: i32 = __retval;
    return _v5;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut input: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: i32 = 4;
    unsafe { std::ptr::write_volatile(std::ptr::addr_of_mut!(input), _v1) };
    let _v2: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v3: i32 = unsafe { std::ptr::read_volatile(std::ptr::addr_of!(input)) };
    let _v4: i32 = asm_probe(_v3);
    let _v5: i32 = unsafe { printf(_v2 as *const i8, _v4) };
    let _v6: i32 = 0;
    __retval = _v6;
    let _v7: i32 = __retval;
    std::process::exit(_v7 as i32);
}
