crates/slate/tests/snapshots/int128_struct.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

#[repr(C)]
#[derive(Clone, Copy)]
struct Wide {
    tag: i32,
    value: i128,
    uvalue: u128,
}


unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut w: Wide = Wide { tag: 0, value: 0, uvalue: 0 };
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: i32 = 7;
    w.tag = _v1;
    let _v2: i128 = -1234567890123456789i128;
    w.value = _v2;
    let _v3: u128 = 12345678901234567890u128;
    w.uvalue = _v3;
    let _v4: i128 = 1;
    let _v5: i128 = w.value;
    let _v6: i128 = _v5 + _v4;
    w.value = _v6;
    let _v7: u128 = 2;
    let _v8: u128 = w.uvalue;
    let _v9: u128 = _v8 * _v7;
    w.uvalue = _v9;
    let _v10: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v11: i32 = w.tag;
    let _v12: i32 = unsafe { printf(_v10 as *const i8, _v11) };
    let _v13: *mut i8 = b"%llu\n\0".as_ptr() as *mut i8;
    let _v14: i128 = w.value;
    let _v15: i32 = 64;
    let _v16: i128 = _v14 >> _v15;
    let _v17: u64 = _v16 as u64;
    let _v18: i32 = unsafe { printf(_v13 as *const i8, _v17) };
    let _v19: *mut i8 = b"%llu\n\0".as_ptr() as *mut i8;
    let _v20: i128 = w.value;
    let _v21: u64 = _v20 as u64;
    let _v22: i32 = unsafe { printf(_v19 as *const i8, _v21) };
    let _v23: *mut i8 = b"%llu\n\0".as_ptr() as *mut i8;
    let _v24: u128 = w.uvalue;
    let _v25: i32 = 64;
    let _v26: u128 = _v24 >> _v25;
    let _v27: u64 = _v26 as u64;
    let _v28: i32 = unsafe { printf(_v23 as *const i8, _v27) };
    let _v29: *mut i8 = b"%llu\n\0".as_ptr() as *mut i8;
    let _v30: u128 = w.uvalue;
    let _v31: u64 = _v30 as u64;
    let _v32: i32 = unsafe { printf(_v29 as *const i8, _v31) };
    let _v33: *mut i8 = b"%zu\n\0".as_ptr() as *mut i8;
    let _v34: u64 = std::mem::size_of::<Wide>() as u64;
    let _v35: i32 = unsafe { printf(_v33 as *const i8, _v34) };
    let _v36: i32 = 0;
    __retval = _v36;
    let _v37: i32 = __retval;
    std::process::exit(_v37 as i32);
}
