crates/slate/tests/snapshots/lazy_singleton.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

static mut cached_value: i32 = 0;

static mut computed: i32 = 0;

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn compute() -> i32 {
    let mut __retval: i32 = 0;
    let _v0: i32 = 42;
    __retval = _v0;
    let _v1: i32 = __retval;
    return _v1;
}

fn get_value() -> i32 {
    let mut __retval: i32 = 0;
    {
        let _v0: i32 = unsafe { computed };
        let _v1: bool = _v0 != 0;
        let _v2: bool = !_v1;
        if _v2 {
            let _v3: i32 = compute();
            unsafe {
                cached_value = _v3;
            }
            let _v4: i32 = 1;
            unsafe {
                computed = _v4;
            }
        }
    }
    let _v5: i32 = unsafe { cached_value };
    __retval = _v5;
    let _v6: i32 = __retval;
    return _v6;
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v2: i32 = get_value();
    let _v3: i32 = unsafe { printf(_v1 as *const i8, _v2) };
    let _v4: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v5: i32 = get_value();
    let _v6: i32 = unsafe { printf(_v4 as *const i8, _v5) };
    let _v7: i32 = 0;
    __retval = _v7;
    let _v8: i32 = __retval;
    std::process::exit(_v8 as i32);
}
