crates/slate/tests/snapshots/libc_address_taken_safe_callback.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

#[repr(C)]
#[derive(Clone, Copy)]
struct Allocator {
    realloc_fn: Option<unsafe extern "C" fn(*mut core::ffi::c_void, u64) -> *mut core::ffi::c_void>,
    free_fn: Option<unsafe extern "C" fn(*mut core::ffi::c_void)>,
}


static mut alloc: Allocator = Allocator { realloc_fn: unsafe { std::mem::transmute::<*const (), Option<unsafe extern "C" fn(*mut core::ffi::c_void, u64) -> *mut core::ffi::c_void>>(realloc as *const ()) }, free_fn: unsafe { std::mem::transmute::<*const (), Option<unsafe extern "C" fn(*mut core::ffi::c_void)>>(free as *const ()) } };

unsafe extern "C" {
    fn realloc(_0: *mut core::ffi::c_void, _1: usize) -> *mut core::ffi::c_void;
    fn free(_0: *mut core::ffi::c_void);
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut p: *mut core::ffi::c_void = std::ptr::null_mut();
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: Option<unsafe extern "C" fn(*mut core::ffi::c_void, u64) -> *mut core::ffi::c_void> = unsafe { alloc.realloc_fn };
    let _v2: *mut core::ffi::c_void = std::ptr::null_mut();
    let _v3: u64 = 8;
    let _v4: *mut core::ffi::c_void = unsafe { _v1.unwrap()(_v2, _v3) };
    p = _v4;
    let _v5: Option<unsafe extern "C" fn(*mut core::ffi::c_void)> = unsafe { alloc.free_fn };
    let _v6: *mut core::ffi::c_void = p;
    unsafe { _v5.unwrap()(_v6) };
    let _v7: *mut i8 = b"ok\n\0".as_ptr() as *mut i8;
    let _v8: i32 = unsafe { printf(_v7 as *const i8) };
    let _v9: i32 = 0;
    __retval = _v9;
    let _v10: i32 = __retval;
    std::process::exit(_v10 as i32);
}
