crates/slate/tests/snapshots/local_named_enum_declaration.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

#[repr(C)]
#[allow(non_camel_case_types)]
#[derive(Clone, Copy, PartialEq, Eq, Debug, Hash)]
enum XML_Status {
    XML_STATUS_ERROR = 0,
    XML_STATUS_OK = 1,
}


#[repr(C)]
#[derive(Clone, Copy)]
struct Case {
    expectedStatus: XML_Status,
}


unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut cases: aligned::Aligned<aligned::A4, [Case; 2]> = aligned::Aligned([Case { expectedStatus: XML_Status::XML_STATUS_ERROR }; 2]);
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: u32 = XML_Status::XML_STATUS_OK as u32;
    let _v2: i64 = 0;
    cases[(_v2 as usize)].expectedStatus = XML_Status::XML_STATUS_OK;
    let _v3: u32 = XML_Status::XML_STATUS_ERROR as u32;
    let _v4: i64 = 1;
    cases[(_v4 as usize)].expectedStatus = XML_Status::XML_STATUS_ERROR;
    {
        let mut i: i32 = 0;
        let _v5: i32 = 0;
        i = _v5;
        loop {
            let _v6: i32 = i;
            let _v7: i32 = 2;
            let _v8: bool = _v6 < _v7;
            if !_v8 {
                break;
            }
            {
                let mut expectedStatus: aligned::Aligned<aligned::A4, XML_Status> = aligned::Aligned(XML_Status::XML_STATUS_ERROR);
                let _v9: i32 = i;
                let _v10: i64 = _v9 as i64;
                let _v11: u32 = cases[(_v10 as usize)].expectedStatus as u32;
                *expectedStatus = unsafe { std::mem::transmute(_v11) };
                {
                    let _v12: u32 = *expectedStatus as u32;
                    let _v13: u32 = XML_Status::XML_STATUS_OK as u32;
                    let _v14: bool = _v12 == _v13;
                    if _v14 {
                        let _v15: *mut i8 = b"ok\n\0".as_ptr() as *mut i8;
                        let _v16: i32 = unsafe { printf(_v15 as *const i8) };
                    } else {
                        let _v17: *mut i8 = b"error\n\0".as_ptr() as *mut i8;
                        let _v18: i32 = unsafe { printf(_v17 as *const i8) };
                    }
                }
            }
            let _v19: i32 = i;
            let _v20: i32 = _v19 + 1;
            i = _v20;
        }
    }
    let _v21: i32 = 0;
    __retval = _v21;
    let _v22: i32 = __retval;
    std::process::exit(_v22 as i32);
}
