crates/slate/tests/snapshots/local_struct_name_collision.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

#[repr(C)]
#[derive(Clone, Copy)]
struct TestCase {
    doc: *mut i8,
    expectedStatus: i32,
}


#[repr(C)]
#[derive(Clone, Copy)]
struct TestCase_0 {
    usesParameterEntities: i32,
    weight: i32,
}


#[repr(C)]
#[derive(Clone, Copy)]
struct TestCase_1 {
    expectedMovementInChars: i32,
    input: *mut i8,
}


unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn sum_docs() -> i32 {
    let mut __retval: i32 = 0;
    let mut cases: aligned::Aligned<aligned::A16, [TestCase; 3]> = aligned::Aligned([TestCase { doc: std::ptr::null_mut(), expectedStatus: 0 }; 3]);
    let mut total: i32 = 0;
    *cases = [TestCase { doc: b"a\0".as_ptr() as *mut i8, expectedStatus: 1 }, TestCase { doc: b"bb\0".as_ptr() as *mut i8, expectedStatus: 2 }, TestCase { doc: b"ccc\0".as_ptr() as *mut i8, expectedStatus: 3 }];
    let _v0: i32 = 0;
    total = _v0;
    {
        let mut i: i32 = 0;
        let _v1: i32 = 0;
        i = _v1;
        loop {
            let _v2: i32 = i;
            let _v3: i32 = 3;
            let _v4: bool = _v2 < _v3;
            if !_v4 {
                break;
            }
            {
                let _v5: i64 = 0;
                let _v6: i32 = i;
                let _v7: i64 = _v6 as i64;
                let _v8: *mut i8 = cases[(_v7 as usize)].doc;
                let _v9: *mut i8 = unsafe { _v8.add(0) };
                let _v10: i8 = unsafe { *_v9 };
                let _v11: i32 = _v10 as i32;
                let _v12: i32 = i;
                let _v13: i64 = _v12 as i64;
                let _v14: i32 = cases[(_v13 as usize)].expectedStatus;
                let _v15: i32 = _v11 * _v14;
                let _v16: i32 = total;
                let _v17: i32 = _v16 + _v15;
                total = _v17;
            }
            let _v18: i32 = i;
            let _v19: i32 = _v18 + 1;
            i = _v19;
        }
    }
    let _v20: i32 = total;
    __retval = _v20;
    let _v21: i32 = __retval;
    return _v21;
}

fn sum_flags() -> i32 {
    let mut __retval: i32 = 0;
    let mut cases: aligned::Aligned<aligned::A16, [TestCase_0; 2]> = aligned::Aligned([TestCase_0 { usesParameterEntities: 0, weight: 0 }; 2]);
    let mut total: i32 = 0;
    *cases = [TestCase_0 { usesParameterEntities: 1, weight: 10 }, TestCase_0 { usesParameterEntities: 0, weight: 20 }];
    let _v0: i32 = 0;
    total = _v0;
    {
        let mut i: i32 = 0;
        let _v1: i32 = 0;
        i = _v1;
        loop {
            let _v2: i32 = i;
            let _v3: i32 = 2;
            let _v4: bool = _v2 < _v3;
            if !_v4 {
                break;
            }
            {
                {
                    let _v5: i32 = i;
                    let _v6: i64 = _v5 as i64;
                    let _v7: i32 = cases[(_v6 as usize)].usesParameterEntities;
                    let _v8: bool = _v7 != 0;
                    if _v8 {
                        let _v9: i32 = i;
                        let _v10: i64 = _v9 as i64;
                        let _v11: i32 = cases[(_v10 as usize)].weight;
                        let _v12: i32 = total;
                        let _v13: i32 = _v12 + _v11;
                        total = _v13;
                    } else {
                        let _v14: i32 = i;
                        let _v15: i64 = _v14 as i64;
                        let _v16: i32 = cases[(_v15 as usize)].weight;
                        let _v17: i32 = total;
                        let _v18: i32 = _v17 - _v16;
                        total = _v18;
                    }
                }
            }
            let _v19: i32 = i;
            let _v20: i32 = _v19 + 1;
            i = _v20;
        }
    }
    let _v21: i32 = total;
    __retval = _v21;
    let _v22: i32 = __retval;
    return _v22;
}

fn sum_movements() -> i32 {
    let mut __retval: i32 = 0;
    let mut cases: aligned::Aligned<aligned::A16, [TestCase_1; 3]> = aligned::Aligned([TestCase_1 { expectedMovementInChars: 0, input: std::ptr::null_mut() }; 3]);
    let mut total: i32 = 0;
    *cases = [TestCase_1 { expectedMovementInChars: 1, input: b"x\0".as_ptr() as *mut i8 }, TestCase_1 { expectedMovementInChars: 2, input: b"yy\0".as_ptr() as *mut i8 }, TestCase_1 { expectedMovementInChars: 3, input: b"zzz\0".as_ptr() as *mut i8 }];
    let _v0: i32 = 0;
    total = _v0;
    {
        let mut i: i32 = 0;
        let _v1: i32 = 0;
        i = _v1;
        loop {
            let _v2: i32 = i;
            let _v3: i32 = 3;
            let _v4: bool = _v2 < _v3;
            if !_v4 {
                break;
            }
            {
                let _v5: i32 = i;
                let _v6: i64 = _v5 as i64;
                let _v7: i32 = cases[(_v6 as usize)].expectedMovementInChars;
                let _v8: i64 = 0;
                let _v9: i32 = i;
                let _v10: i64 = _v9 as i64;
                let _v11: *mut i8 = cases[(_v10 as usize)].input;
                let _v12: *mut i8 = unsafe { _v11.add(0) };
                let _v13: i8 = unsafe { *_v12 };
                let _v14: i32 = _v13 as i32;
                let _v15: i32 = _v7 + _v14;
                let _v16: i32 = total;
                let _v17: i32 = _v16 + _v15;
                total = _v17;
            }
            let _v18: i32 = i;
            let _v19: i32 = _v18 + 1;
            i = _v19;
        }
    }
    let _v20: i32 = total;
    __retval = _v20;
    let _v21: i32 = __retval;
    return _v21;
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"%d %d %d\n\0".as_ptr() as *mut i8;
    let _v2: i32 = sum_docs();
    let _v3: i32 = sum_flags();
    let _v4: i32 = sum_movements();
    let _v5: i32 = unsafe { printf(_v1 as *const i8, _v2, _v3, _v4) };
    let _v6: i32 = 0;
    __retval = _v6;
    let _v7: i32 = __retval;
    std::process::exit(_v7 as i32);
}
