crates/slate/tests/snapshots/local_vla.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn sum_vla(arg0: i32, arg1: *mut i32) -> i32 {
    let mut length: i32 = 0;
    let mut values: *mut i32 = std::ptr::null_mut();
    let mut __retval: i32 = 0;
    let mut total: i32 = 0;
    length = arg0;
    values = arg1;
    let _v0: i32 = 0;
    total = _v0;
    {
        let mut index: i32 = 0;
        let _v1: i32 = 0;
        index = _v1;
        loop {
            let _v2: i32 = index;
            let _v3: i32 = length;
            let _v4: bool = _v2 < _v3;
            if !_v4 {
                break;
            }
            {
                let _v5: i32 = index;
                let _v6: i64 = _v5 as i64;
                let _v7: *mut i32 = values;
                let _v8: *mut i32 = unsafe { _v7.offset(_v6 as isize) };
                let _v9: i32 = unsafe { *_v8 };
                let _v10: i32 = total;
                let _v11: i32 = _v10 + _v9;
                total = _v11;
            }
            let _v12: i32 = index;
            let _v13: i32 = _v12 + 1;
            index = _v13;
        }
    }
    let _v14: i32 = total;
    __retval = _v14;
    let _v15: i32 = __retval;
    return _v15;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut result: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    {
        let mut length: i32 = 0;
        let mut saved_stack: *mut u8 = std::ptr::null_mut();
        let _v1: i32 = 4;
        length = _v1;
        let _v2: i32 = length;
        let _v3: u64 = _v2 as u64;
        let _v4: *mut u8 = 0usize as *mut u8;
        saved_stack = _v4;
        {
            let mut values: Vec<i32> = vec![0; _v3 as usize];
            {
                let mut index: i32 = 0;
                let _v5: i32 = 0;
                index = _v5;
                loop {
                    let _v6: i32 = index;
                    let _v7: i32 = length;
                    let _v8: bool = _v6 < _v7;
                    if !_v8 {
                        break;
                    }
                    {
                        let _v9: i32 = index;
                        let _v10: i32 = 3;
                        let _v11: i32 = _v9 + _v10;
                        let _v12: i32 = index;
                        let _v13: i64 = _v12 as i64;
                        let _v14: *mut i32 = unsafe { values.as_mut_ptr().offset(_v13 as isize) };
                        unsafe {
                            *_v14 = _v11;
                        }
                    }
                    let _v15: i32 = index;
                    let _v16: i32 = _v15 + 1;
                    index = _v16;
                }
            }
            let _v17: i32 = length;
            let _v18: i32 = sum_vla(_v17, values.as_mut_ptr());
            result = _v18;
        }
    }
    let _v19: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v20: i32 = result;
    let _v21: i32 = 1;
    let _v22: i32 = _v20 + _v21;
    let _v23: i32 = unsafe { printf(_v19 as *const i8, _v22) };
    let _v24: i32 = 0;
    __retval = _v24;
    let _v25: i32 = __retval;
    std::process::exit(_v25 as i32);
}
